Prevent 2 windows from opening upon session restore

Session management would start 2 konsole windows upon login.

Thanks John Stanley (jpsinthemix gmail com) for patch

BUG: 367447
(cherry picked from commit 5b11fd593b954504343bdb418c54a8e7913d9c7c)